[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BMRBDep"
version = "1.0.0"
description = "Powers the BMRB deposition system."
requires-python = ">=3.13"

dependencies = [
    "flask==2.2.2",
    "Werkzeug==2.3.8", # Can be removed after updating to flask3 (also requires dealing with deprecation of url_quote)
    "simplejson==3.18.0",
    "flask-cors==3.0.10",
    "Flask-Mail==0.9.1", #test
    "requests==2.28.1", # For querying ORCID and PubMed
    "pynmrstar==3.3.5", # For working with BMRB entries
    "validate_email @ git+https://github.com/bmrb-io/validate_email.git@2b38de4374b1e6188a280b0c86e11e45d6308bd0", # For email validation
    "gitpython==3.1.45", # For managing depositions
    "filelock==3.8.2", # For managing depositions
    "python-dateutil==2.8.2", # For managing depositions
    "psycopg2-binary", # For putting entries in ETS
    "Unidecode==1.3.6", # For stripping unicode
]

[project.optional-dependencies]
dev = [
    "nodeenv",
    "watchdog",
    "mypy",
]

[tool.setuptools.packages.find]
exclude = ["stats*", "helpers*"]
