[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "BMRBDep"
version = "1.0.0"
description = "Powers the BMRB deposition system."
requires-python = ">=3.13"

dependencies = [
    "flask==3.1.3",
    "flask-cors==6.0.2",
    "simplejson==4.1.1",
    "Flask-Mail==0.10.0", #test
    "requests==2.34.0", # For querying ORCID and PubMed
    "pynmrstar==3.3.5", # For working with BMRB entries
    "validate_email @ git+https://github.com/bmrb-io/validate_email.git@2b38de4374b1e6188a280b0c86e11e45d6308bd0", # For email validation
    "gitpython==3.1.50", # For managing depositions
    "filelock==3.29.0", # For managing depositions
    "python-dateutil==2.9.0", # For managing depositions
    "psycopg2-binary==2.9.12", # For putting entries in ETS
    "Unidecode==1.4.0", # For stripping unicode
]

[dependency-groups]
dev = [
    "nodeenv",
    "watchdog",
    "mypy",
]

[tool.setuptools.packages.find]
exclude = ["stats*", "helpers*"]
